GNOME Bugzilla – Bug 579595
fullscreen plugin is massively overzealous
Last modified: 2019-02-22 03:15:29 UTC
I suggest that double clicking *on the image itself* should be the only operation which makes it go fullscreen. At the moment, even double clicking on the scrollbar will make it go fullscreen. This means if you click a couple of times to scroll up slightly, and click too fast, the display switches to fullscreen. I actually think the plugin shouldn't even exist and that going fullscreen should be a toolbar icon. Double clicking doesn't normally make applications go fullscreen, and a lot of users get *very* confused when things go fullscreen. They don't understand that something as gone fullscreen, they just see that all of their panels/windows have disappeared and think things have crashed. Other information:
(In reply to comment #0) > At the moment, even double clicking on the scrollbar will make it go > fullscreen. This means if you click a couple of times to scroll up slightly, > and click too fast, the display switches to fullscreen. > Yeah, that's because the plugin reacts to click events for the whole widget which includes the scrollbars. Not that easy to fix. > I actually think the plugin shouldn't even exist and that going fullscreen > should be a toolbar icon. Double clicking doesn't normally make applications go > fullscreen, and a lot of users get *very* confused when things go fullscreen. > They don't understand that something as gone fullscreen, they just see that all > of their panels/windows have disappeared and think things have crashed. > That's the reason this functionality is shipped as a plugin you need to enable. Fullscreen on toolbar is already possible (unrelated to the plugin) by adding the respective item to the toolbar by using the built-in toolbareditor.
*** Bug 552537 has been marked as a duplicate of this bug. ***
*** Bug 665462 has been marked as a duplicate of this bug. ***
Finally: commit 0815e9eb2232fc8734622d2254d64774aadecd62 Author: Felix Riemann <> Date: Fri Apr 6 17:49:43 2012 +0200 fullscreen: Check if clicks originated from over the image This avoids going fullscreen by clicking the scrollbars. https://bugzilla.gnome.org/show_bug.cgi?id=579595 --- This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.