fullscreen: Check if clicks originated from over the image

This avoids going fullscreen by clicking the scrollbars.

https://bugzilla.gnome.org/show_bug.cgi?id=579595